# process-audio-api

./: .claudeignore  .dockerignore  .env.example  .gitignore  AUTHENTICATION_IMPLEMENTATION.md  COPILOT_REVIEW_RESPONSES.md  COPILOT_SUGGESTIONS_RESOLVED.md  Dockerfile  MOBILE_API_GUIDE.md  PROMPT_FOR_FRONTEND_DEV.md  README.md  README_MOBILE_BACKEND.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  YOUTUBE_FIXES.md  analisi.txt  app.py  deepgram_postman_collection.json  docker-compose.example.yml  docker-compose.yml  openapi.yaml  postman_collection.json  process_audio.py  pyproject.toml  render.yaml  requirements.txt  sentiment_analysis.py  simple_test_app.py  start.sh  test_auth_flows.py  test_chunking.py  test_chunking_demo.py  test_endpoints.py  test_google_translation.py  test_new_app.py  test_translation_api_demo.py  test_translation_chunking.py  test_video_fixes.py  watchdog_runner.py  (+1 more)
.claude/: api-contract.md  change-workflow.md  docs.md  instructions.md  mcp.json  security.md  testing.md
DOCS/: AUTH0_INTEGRATION_SUMMARY.md  CHANGELOG_LANGUAGE_FEATURE.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY_LANGUAGE.md  TROUBLESHOOTING.md  WEBSOCKET_LANGUAGE_SUPPORT.md
api/: __init__.py  auth.py  user_config.py
core/: __init__.py
docs/: architecture.md  deployment_render.md  runbook.md  security-hardening-todo.md  step-1-implementation-summary.md
examples/: websocket_language_example.js
flask_app/: __init__.py
fonts/: Roboto-Regular.pkl
google/: backup_google-credentials.json  google-credentials.json
instance/: test_saas.db
models/: __init__.py  artifact.py  (+5 more)
(+100 files in other folders)
